--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,13 +9,15 @@ body {
   background-size: 10px 10px;
 }
 
-.light-mode-noto .form-container-noto {
+.light-mode-noto .form-container-noto,
+.light-mode-noto .modal {
   background-color: #ffffff;
 }
 
 .light-mode-noto p,
 .light-mode-noto h1,
-.light-mode-noto h2 {
+.light-mode-noto h2,
+.light-mode-noto .modal {
   color: #111111;
 }
 
@@ -26,7 +28,8 @@ body {
   background-size: 10px 10px;
 }
 
-.dark-mode-noto .form-container-noto {
+.dark-mode-noto .form-container-noto,
+.dark-mode-noto .modal{
   background-color: #111111;
 }
 
@@ -34,6 +37,7 @@ body {
 .dark-mode-noto h1,
 .dark-mode-noto h2,
 .dark-mode-noto form,
-.dark-mode-noto form::placeholder {
+.dark-mode-noto form::placeholder,
+.dark-mode-noto .modal  {
   color: #FFFFFF;
 }
