--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+:root {
+  --spinner-animation-speed: 2s;
+}
+
 body {
   font-family: "Geist Mono Variable", monospace;
 }
@@ -80,4 +84,23 @@ textarea:focus {
   justify-content: space-between;
   align-items: center;
   padding: 5px;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  animation: spin var(--spinner-animation-speed) linear infinite;
+}
+
+.card-saving {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
