--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,7 +21,8 @@ body {
 .light-mode-noto p,
 .light-mode-noto h1,
 .light-mode-noto h2,
-.light-mode-noto .modal {
+.light-mode-noto .modal,
+.light-mode-noto .logout-text {
   color: #111111;
 }
 
@@ -42,106 +43,7 @@ body {
 .dark-mode-noto h2,
 .dark-mode-noto form,
 .dark-mode-noto form::placeholder,
-.dark-mode-noto .modal {
+.dark-mode-noto .modal,
+.dark-mode-noto .logout-text {
   color: #ffffff;
-}
-
-.card {
-  position: absolute;
-  width: 400px;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
-    0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
-    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
-}
-
-.card-body {
-  padding: 1em;
-  border-radius: 0 0 5px 5px;
-}
-
-.card-body textarea {
-  background-color: inherit;
-  border: none;
-  width: 100%;
-  height: 100%;
-  resize: none;
-  font-size: 16px;
-}
-
-textarea:focus {
-  background-color: inherit;
-  outline: none;
-  width: 100%;
-  height: 100%;
-}
-
-.card-header {
-  background-color: #9bd1de;
-  border-radius: 5px 5px 0 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px;
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.spinner {
-  animation: spin var(--spinner-animation-speed) linear infinite;
-}
-
-.card-saving {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-#controls {
-  display: flex;
-  flex-direction: row; /* horizontal como un dock */
-  gap: 1em;
-  align-items: center;
-  position: fixed;
-  bottom: 1em;
-  left: 50%;
-  transform: translateX(-50%); /* centrar horizontalmente */
-  background-color: #b5b5b5;
-  padding: 1em;
-  border-radius: 5px;
-
-  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
-    0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
-    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
-  z-index: 10000;
-}
-
-#add-btn {
-  background-color: rgba(107, 107, 107, 1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.color {
-  background-color: grey;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-
-  cursor: pointer;
-  transition: 0.3s;
 }
